Increase game data in catalog, enhance category component structure with links and titles, improve exclusive styles with hover effects, and add modal details in Mostseller component

--- a/Pages/exclusive.html
+++ b/Pages/exclusive.html
@@ -1,3 +1,6 @@
+<!-- As imagens das notícias e jgoos foram pegos do site IGN Brasil, cao não apareçam é por mudança na página -->
+<!-- O link dele aqui https://br.ign.com/xbox-series-x -->
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -38,33 +41,32 @@
         <header>
             <div class="news-card">
                 <!-- Imagem com descrição alternativa para acessibilidade -->
-                <img src="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
-                    alt="Arcane Temporada 2">
+                <img src="https://sm.ign.com/t/ign_br/slotter/5/52296/52296_cntk.800.jpg" alt="Arcane Temporada 2">
                 <div class="newscard-content">
                     <!-- Texto descritivo da notícia -->
-                    <p>Entrega evolução de trama e musicais que abrilhantam narrativa</p>
+                    <p>25 anos de Chrono Cross: a joia dos RPGs que seguiu um caminho diferente das sequências óbvias
+                    </p>
                 </div>
             </div>
             </div>
             <div class="news-card">
-                <img src="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
-                    alt="Arcane Temporada 2">
+                <img src="https://sm.ign.com/ign_br/screenshot/default/blob_mvq2.jpg" alt="Arcane Temporada 2">
                 <div class="newscard-content">
-                    <p>entrega evolução de<br>trama e musicais que<br>abrilhantam narrativa</p>
+                    <p>
+                        The Game Awards 2024: veja os indicados em todas as categoriasThe Game Awards</p>
                 </div>
             </div>
             <div class="news-card">
-                <img src="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
-                    alt="Arcane Temporada 2">
+                <img src="https://sm.ign.com/t/ign_br/slotter/5/52054/52054_547q.800.jpg" alt="Arcane Temporada 2">
                 <div class="newscard-content">
-                    <p>entrega evolução de<br>trama e musicais que<br>abrilhantam narrativa</p>
+                    <p>Os esnobados no The Game Awards 2024 que não concorrem a Jogo do Ano</p>
                 </div>
             </div>
             <div class="news-card">
-                <img src="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
-                    alt="Arcane Temporada 2">
+                <img src="https://sm.ign.com/t/ign_br/slotter/5/52055/52055_znkk.800.jpg" alt="Arcane Temporada 2">
                 <div class="newscard-content">
-                    <p>entrega evolução de<br>trama e musicais que<br>abrilhantam narrativa</p>
+                    <p>S.T.A.L.K.E.R. 2, Nine Sols e mais; Xbox revela segunda leva de jogos do Game Pass de novembro de
+                        2024</p>
                 </div>
             </div>
         </header>
@@ -77,30 +79,33 @@
                     <!-- Cada item de destaque é um link com imagem e descrição -->
                     <div>
                         <a href="">
-                            <img src="../images/carroussel/Banner1.png" alt="Imagem Notícias">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet ex a tellus
-                                elementum vulputate.</p>
+                            <img src="https://sm.ign.com/ign_br/news/s/stalker-2-/stalker-2-heart-of-chornobyl-has-already-sold-1-million-copi_52gg.jpg"
+                                alt="Imagem Notícias">
+                            <p>STALKER 2: Heart of Chornobyl já vendeu 1 milhão de cópias, além dos milhares de
+                                jogadores do Xbox Game Pass</p>
                         </a>
                     </div>
                     <div>
                         <a href="">
-                            <img src="../images/carroussel/Banner1.png" alt="Imagem Notícias">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet ex a tellus
-                                elementum vulputate.</p>
+                            <img src="https://sm.ign.com/ign_br/screenshot/default/blob_7zsg.png" alt="Imagem Notícias">
+                            <p>Região inédita, romance e exploração: diretora de Avowed explica decisões feitas para
+                                novo jogo de Pillars of Eternity</p>
                         </a>
                     </div>
                     <div>
                         <a href="">
-                            <img src="../images/carroussel/Banner1.png" alt="Imagem Notícias">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet ex a tellus
-                                elementum vulputate.</p>
+                            <img src="https://sm.ign.com/ign_br/news/s/star-wars-/star-wars-outlaws-patch-cuts-stealth-objectives-improves-ai_4yvd.jpg"
+                                alt="Imagem Notícias">
+                            <p>Atualização 1.4.0 de Star Wars Outlaws corta obrigação de momentos furtivos, melhora IA e
+                                muito mais</p>
                         </a>
                     </div>
                     <div>
                         <a href="">
-                            <img src="../images/carroussel/Banner1.png" alt="Imagem Notícias">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet ex a tellus
-                                elementum vulputate.</p>
+                            <img src="https://sm.ign.com/t/ign_br/news/b/black-myth/black-myth-wukong-dev-game-science-teases-surprises-for-late_g5ch.280.jpg"
+                                alt="Imagem Notícias">
+                            <p>Em meio a indicações e prêmio, dev de Black Myth: Wukong promete "surpresas" para final
+                                deste ano</p>
                         </a>
                     </div>
                 </div>
@@ -113,19 +118,19 @@
                     <!-- Uso do componente personalizado 'most-seller' -->
                     <!-- Cada atributo define as propriedades do componente -->
                     <most-seller
-                        image="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
-                        name="Halo Infinite" subtitle="" price="R$ 99,90" previous-price="R$ 129,90" genre1="Aventura"
-                        genre2="RPG" genre3="Ação" rating="⭐⭐⭐⭐" badge="../images/image7.svg" badge-region="Global">
+                        image="https://image.api.playstation.com/vulcan/ap/rnd/202405/2921/23706f50dc462071dc71f8dd3910b62f0c969396df099a06.png"
+                        name="Call of Duty" subtitle="Black Ops 6" price="R$ 99,90" previous-price="R$ 129,90"
+                        genre1="FPS" genre2="Multiplayer" genre3="Ação" rating="⭐⭐⭐⭐" badge="../images/image7.svg"
+                        badge-region="Global">
                     </most-seller>
                     <most-seller
-                        image="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
-                        name="Halo Infinite" subtitle="" price="R$ 99,90" previous-price="R$ 129,90" genre1="Aventura"
-                        genre2="RPG" genre3="Ação" rating="⭐⭐⭐⭐" badge="../images/image7.svg"
+                        image="https://www.minecraft.net/content/dam/games/minecraft/key-art/MC_One-Vanilla_285x380px.jpg"
+                        name="Minecraft" subtitle="Java & Bedrock" price="R$ 79,90" previous-price="R$ 249,90"
+                        genre1="Aventura" genre2="RPG" genre3="Simulação" rating="⭐⭐⭐⭐⭐" badge="../images/image7.svg"
                         badge-region="Global"></most-seller>
-                    <most-seller
-                        image="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
-                        name="Halo Infinite" subtitle="" price="R$ 99,90" previous-price="R$ 129,90" genre1="Aventura"
-                        genre2="RPG" genre3="Ação" rating="⭐⭐⭐⭐" badge="../images/image7.svg"
+                    <most-seller image="https://products.eneba.games/resized-products/fzlyVIq_350x200_1x-0.jpg"
+                        name="Dark Souls III" subtitle="Deluxe Edition" price="R$ 99,90" previous-price="R$ 199,90"
+                        genre1="Aventura" genre2="RPG" genre3="Ação" rating="⭐⭐⭐⭐" badge="../images/image7.svg"
                         badge-region="Global"></most-seller>
                 </div>
             </section>
@@ -152,38 +157,41 @@
                         badge="../../images/image7.svg" name="Cyberpunk 2077" subtitle="phantom liberty"
                         price="R$ 80,00"></card-component>
                     <card-component
-                        image="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
-                        badge="../../images/image7.svg" name="Halo Infinite" price="R$ 100,00"></card-component>
+                        image="https://image.api.playstation.com/vulcan/ap/rnd/202210/0712/cWZlv5HCWi4sGKuwVRO4c8Xg.png"
+                        badge="../images/image7.svg" name="Resident Evil 4" subtitle="Remake"
+                        price="R$ 70,00"></card-component>
                 </div>
                 <div class="top_sales">
                     <card-component
-                        image="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
-                        badge="../../images/image7.svg" name="Halo Infinite" price="R$ 100,00"></card-component>
+                        image="https://image.api.playstation.com/vulcan/ap/rnd/202405/3123/21a60345b63762324e97658fce8d3c1fa35dfc3dd9555629.jpg"
+                        badge="../images/image7.svg" name="Diablo IV" subtitle="" price="R$ 80,00"></card-component>
                     <card-component
-                        image="https://image.api.playstation.com/vulcan/ap/rnd/202010/0114/b4Q1XWYaTdJLUvRuALuqr0wP.png"
-                        badge="../../images/image7.svg" name="Doom Eternal" price="R$ 70,00"></card-component>
+                        image="https://image.api.playstation.com/vulcan/ap/rnd/202405/2921/23706f50dc462071dc71f8dd3910b62f0c969396df099a06.png"
+                        badge="../../images/image7.svg" name="Call of Duty" subtitle="Black Ops 6"
+                        price="R$ 100,00"></card-component>
                     <card-component
-                        image="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077UltimateEdition_CDPROJEKTRED_Editions_S2_1200x1600-81442c61fd09b45ecd03add7c0c3afdd"
-                        badge="../../images/image7.svg" name="Cyberpunk 2077" subtitle="phantom liberty"
+                        image="https://www.minecraft.net/content/dam/games/minecraft/key-art/MC_One-Vanilla_285x380px.jpg"
+                        badge="../../images/image7.svg" name="Minecraft" subtitle="Java & Bedrock"
                         price="R$ 80,00"></card-component>
-                    <card-component
-                        image="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
-                        badge="../../images/image7.svg" name="Halo Infinite" price="R$ 100,00"></card-component>
+                    <card-component image="https://products.eneba.games/resized-products/fzlyVIq_350x200_1x-0.jpg"
+                        badge="../../images/image7.svg" name="Dark Souls III" subtitle="Deluxe Edition"
+                        price="R$ 100,00"></card-component>
                 </div>
                 <div class="top_sales">
                     <card-component
-                        image="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
-                        badge="../../images/image7.svg" name="Halo Infinite" price="R$ 100,00"></card-component>
+                        image="https://upload.wikimedia.org/wikipedia/pt/8/8d/Hi-Fi_Rush_Xbox_Series_X_capa_digital.jpg"
+                        badge="../../images/image7.svg" name="Hi-Fi Rush" price="R$ 60,00"></card-component>
                     <card-component
-                        image="https://image.api.playstation.com/vulcan/ap/rnd/202010/0114/b4Q1XWYaTdJLUvRuALuqr0wP.png"
-                        badge="../../images/image7.svg" name="Doom Eternal" price="R$ 70,00"></card-component>
+                        image="https://store-images.s-microsoft.com/image/apps.34545.65328483881162508.89a95049-a2dc-4b27-8f56-0a4f5a72a393.e2e2902b-cce7-4ca0-9aba-5f8615c5d9ca?w=272"
+                        badge="../../images/image7.svg" name="Crash Bandicoot" subtitle="N'Sane Trilogy"
+                        price="R$ 70,00"></card-component>
                     <card-component
-                        image="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077UltimateEdition_CDPROJEKTRED_Editions_S2_1200x1600-81442c61fd09b45ecd03add7c0c3afdd"
-                        badge="../../images/image7.svg" name="Cyberpunk 2077" subtitle="phantom liberty"
-                        price="R$ 80,00"></card-component>
+                        image="https://store-images.s-microsoft.com/image/apps.63195.13624715126573049.35e3abd5-bd41-4efb-bc2a-0bfbdd50b02a.d3291934-3236-4279-91eb-792123046d1d?w=272"
+                        badge="../../images/image7.svg" name="Avowed" price="Em Breve"></card-component>
                     <card-component
-                        image="https://s2-ge.glbimg.com/hgj24eLzTOm5WcMh2gsJWPYibEU=/0x7:770x979/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/q/f/4xh4idQlWaQeyAhyDitQ/halo-infinite-capa-xbox-series-x.png"
-                        badge="../../images/image7.svg" name="Halo Infinite" price="R$ 100,00"></card-component>
+                        image="https://store-images.s-microsoft.com/image/apps.55056.13991012152837663.1297136a-f273-41f1-947f-59044c848c55.7dbf4684-b0de-4879-ba2e-c7460c910965?w=272"
+                        badge="../../images/image7.svg" name="Age of Empires II" subtitle="Definitive Edition"
+                        price="R$ 100,00"></card-component>
                 </div>
             </section>
         </main>
