Add detailed product description to Card component and improve catalog script structure for better maintainability

--- a/Pages/catalog.html
+++ b/Pages/catalog.html
@@ -38,7 +38,8 @@
         <footer-component id="footer-text"></footer-component>
     </main>
 
-
+    <!-- Montei essa laço apenas para evitar repetição, ele seria usado com o Backend em um get, 
+        mas como está estátioc deixei ele apenas repetindo o componente -->
     <script>
         // Dados dos jogos
         const games = Array.from({ length: 40 }, (_, i) => ({
